color.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
spec:
  replicas: 2
  selector:
    matchLabels:
      color: red
  template:
    metadata:
      labels:
        color: red
    spec:
      containers:
      - name: red-container
        image: kodekloud/simple-webapp:red
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  selector:
    color: red
  ports:
  - port: 5000
    targetPort: 8080
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 2
  selector:
    matchLabels:
      color: green
  template:
    metadata:
      labels:
        color: green
    spec:
      containers:
      - name: green-container
        image: kodekloud/simple-webapp:green
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    color: green
  ports:
  - port: 6000
    targetPort: 8080
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      color: blue
  template:
    metadata:
      labels:
        color: blue
    spec:
      containers:
      - name: blue-container
        image: kodekloud/simple-webapp:blue
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    color: blue
  ports:
  - port: 7000
    targetPort: 8080
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: red
            port:
              number: 5000
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green
            port:
              number: 6000
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue
            port:
              number: 7000
