java-tomcat-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appleApp
  template:
    metadata:
      labels:
        app: appleApp
    spec:
      containers:
      - name: apple-container
        image: vysnu96/my_repo:apple
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: apple-svc
spec:
  selector:
    app: appleApp
  ports:
  - port: 5000
    targetPort: 8080
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mango-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mangoApp
  template:
    metadata:
      labels:
        app: mangoApp
    spec:
      containers:
      - name: mango-container
        image: vysnu96/my_repo:mango
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mango-svc
spec:
  selector:
    app: mangoApp
  ports:
  - port: 6000
    targetPort: 8080
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: apple-svc
            port:
              number: 5000
      - path: /mango
        pathType: Prefix
        backend:
          service:
            name: mango-svc
            port:
              number: 6000
